Fix checkbox style, add scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 
 /* Style the links inside the navigation bar */
-.topnav a, label {
+.topnav a, .topnav label {
   float: left;
   color: #f2f2f2;
   text-align: center;
@@ -16,7 +16,7 @@
 }
 
 /* Change the color of links on hover */
-.topnav a:hover, label:hover {
+.topnav a:hover, .topnav label:hover {
   background-color: #aaa;
   color: black;
 }
@@ -44,8 +44,21 @@
   --tp-button-foreground-color: #eeeeee;
   --tp-label-foreground-color: #aeb5b8;
 }
+.gui-panel {
+  position: absolute;
+  right: 0;
+  height: 100%;
+}
 .tp-rotv {
+  max-height: 100%;
+  overflow-y: auto;
   text-shadow: 1px 1px #000;
+}
+.tp-rotv::-webkit-scrollbar {
+  width: 10px;
+}
+.tp-rotv::-webkit-scrollbar-thumb {
+  background: #777;
 }
 .tp-rotv button {
   text-shadow: inherit;
